--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-595c91ca-db9c-4286-b3cd-19ba5cff4785;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
